crates/tracel-mlir-rs/src/dialect/llvm/snapshots/tracel_mlir_rs__dialect__llvm__tests__compile_cmpxchg.snap
---
source: crates/tracel-mlir-rs/src/dialect/llvm/mod.rs
expression: module.as_operation()
---
module {
  llvm.func @foo(%arg0: !llvm.ptr, %arg1: i64, %arg2: i64) {
    %0 = llvm.cmpxchg weak %arg0, %arg1, %arg2 monotonic monotonic {alignment = 8 : i64} : !llvm.ptr, i64
    llvm.return
  }
}