crates/tracel-mlir-rs/src/dialect/llvm/snapshots/tracel_mlir_rs__dialect__llvm__tests__compile_get_element_ptr.snap
---
source: crates/tracel-mlir-rs/src/dialect/llvm/mod.rs
expression: module.as_operation()
---
module {
  llvm.func @foo(%arg0: !llvm.ptr) {
    %0 = llvm.getelementptr %arg0[42] : (!llvm.ptr) -> !llvm.ptr, i64
    llvm.return
  }
}
